--- a/popup/choose_page.html
+++ b/popup/choose_page.html
@@ -5,14 +5,13 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="choose_page.css"/>
   </head>
-
 <body>
   <h1 class="title">ROT Quick Settings</h1>
   <input type="button" onclick="alert('Proxy flush complete.')" value="Flush Proxy Settings"><br><br>
   <input type="checkbox" name="TransparentProxyEnable" value="Bike"> Enable Transparent Proxying<br>
   <input type="checkbox" name="SuperCacheEnable" value="Car"> Toggle SuperCache 
   <script src="choose_page.js"></script>
-  <p class="footer"><b>Made proudly in San Diego</b> by the ROT Team</p>
+	<p class="footer"><b>Made proudly in San Diego by the ROT Team</b></p>
 </body>
 
 </html>
