--- a/popup/files/page.html
+++ b/popup/files/page.html
@@ -11,6 +11,7 @@
   <input type="button" onclick="alert('Proxy flush complete.')" value="Flush Proxy Settings"><br><br>
   <input type="checkbox" name="TransparentProxyEnable" value="Bike"> Enable Transparent Proxying<br>
   <input type="checkbox" name="SuperCacheEnable" value="Car"> Toggle SuperCache 
+	<label class="checkbox" for="condition3">Conditions 3</label>
   <script src="choose_page.js"></script>
   <p class="footer"><b>Made proudly in San Diego</b> by the ROT Team</p>
 </body>
