--- a/home/index.html
+++ b/home/index.html
@@ -16,7 +16,7 @@
 		<iframe src="https://duckduckgo.com/search.html?width=400&prefill=ROT Search&bgcolor=#393F4C&focus=yes" style="overflow:hidden;margin:0;padding:0;width:458px;height:40px;" frameborder="0"></iframe>
 		
 		<p>
-			Search via DuckDuckGo
+			Search powered by Rishi. And on occasion DuckDuckGo
 		</p>
 	</body>
 </html>
