--- a/popup/files/page.html
+++ b/popup/files/page.html
@@ -24,3 +24,49 @@
 </body>
 
 </html>
+
+<style>
+html, body {
+	width: 300px;
+	color: #fff;
+	background-color: #272B35;
+	font-family: Roboto;
+}
+
+.title {
+	text-align: center;
+}
+
+.footer {
+	width: 100%;
+	padding: 4px;
+	text-align: center;
+}
+
+.button {
+	border: 2px solid #fafafa;
+	border-radius: 2px;
+	color: #fafafa;
+	background-color: #272B35;
+	font-size: 12px;
+	transition-duration: 0.4s;
+	width: 250px;
+	padding: 4px;
+	padding: 8px;
+}
+
+.button:hover {
+	background-color: #fafafa;
+	color: #212121;
+}
+
+.checkbox {
+	padding: 4px;
+	padding-top: 8px;
+	padding-left: 15px
+}
+
+div {
+	margin: auto;
+}
+</style>
