--- a/popup/files/page.html
+++ b/popup/files/page.html
@@ -7,19 +7,19 @@
   </head>
 
 <body>
-	<h1 class="title">ROT Quick Settings</h1>
+	<h1 class="title">Luna Quick Settings</h1>
 
 	<div class="buttonholder">
 		<input type="button" class="button" value="Flush Proxy Settings">
 	</div>
 	
-	<input type="checkbox" class=settings_chkmrk" id="SuperCache" name="Enable Super Cashe" value="cacheenable">
+	<input type="checkbox" class=settings_chkmrk" id="SuperCache" name="Enable Super Cache" value="cacheenable">
 	<label class="checkbox" for="SuperCache">Enable SuperCache</label>
 	
 	<input type="checkbox" class=settings_chkmrk" id="T-Browsing" name="Toggle Transparent Browsing" value="t-browseenable">
 	<label class="checkbox" for="T-Browsing">Toggle Transarent Browsing (ADMIN)</label>
 
-	<p class="footer"><b>Made proudly in San Diego</b> by the ROT Team</p>
+	<p class="footer"><b>Made proudly in San Diego</b> by the Luna Team</p>
 </body>
 
 </html>
