--- a/home/index.html
+++ b/home/index.html
@@ -1,7 +1,7 @@
 <html>
 	<header>
 		<title>
-			ROT New Tab
+			Luna New Tab
 		</title>
 		
 		<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
@@ -10,7 +10,7 @@
 	<body>
 		<img class="radishmain" src="files/radish.png" width="250" height="250">
 		<h1>
-			Radish of Truth Search
+			Luna Search
 		</h1>
 		
 		<iframe src="https://duckduckgo.com/search.html?width=400&prefill=ROT Search&bgcolor=#393F4C&focus=yes" style="overflow:hidden;margin:0;padding:0;width:458px;height:40px;" frameborder="0"></iframe>
