--- a/home/index.html
+++ b/home/index.html
@@ -8,15 +8,15 @@
 	</header>
 
 	<body>
-		<img class="radishmain" src="files/radish.png" width="250" height="250">
+		<img class="moonmain" src="files/moon.png" width="250" height="250">
 		<h1>
 			Luna Search
 		</h1>
 		
-		<iframe src="https://duckduckgo.com/search.html?width=400&prefill=ROT Search&bgcolor=#393F4C&focus=yes" style="overflow:hidden;margin:0;padding:0;width:458px;height:40px;" frameborder="0"></iframe>
+		<iframe src="https://duckduckgo.com/search.html?width=400&prefill=Luna Search&bgcolor=#393F4C&focus=yes" style="overflow:hidden;margin:0;padding:0;width:458px;height:40px;" frameborder="0"></iframe>
 		
 		<p>
-			Search powered by Rishi. And on occasion DuckDuckGo
+			Search powered by Rishi, and on occasion DuckDuckGo.
 		</p>
 	</body>
 </html>
