--- a/home/index.html
+++ b/home/index.html
@@ -1,7 +1,7 @@
 <html>
 	<header>
 		<title>
-			Luna New Tab
+			Luna Search
 		</title>
 		
 		<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
@@ -9,9 +9,6 @@
 
 	<body>
 		<img class="moonmain" src="files/moon.png" width="250" height="250">
-		<h1>
-			Luna Search
-		</h1>
 		
 		<iframe src="https://duckduckgo.com/search.html?width=400&prefill=Luna Search&bgcolor=#393F4C&focus=yes" style="overflow:hidden;margin:0;padding:0;width:458px;height:40px;" frameborder="0"></iframe>
 		
@@ -28,6 +25,7 @@ body {
 	color: #FAFAFA;
 	text-align: center;
 	font-family: Roboto;
+	font-size: 9px;
 }
 
 img.radishmain {
