--- a/home/index.html
+++ b/home/index.html
@@ -13,7 +13,7 @@
 		<iframe src="https://duckduckgo.com/search.html?width=400&prefill=Luna Search&bgcolor=#393F4C&focus=yes" style="overflow:hidden;margin:0;padding:0;width:458px;height:40px;" frameborder="0"></iframe>
 		
 		<p>
-			Search powered by Rishi, and on occasion DuckDuckGo.
+			Search powered by DuckDuckGo.
 		</p>
 	</body>
 </html>
