--- a/home/index.html
+++ b/home/index.html
@@ -10,7 +10,7 @@
 	<body>
 		<img class="moonmain" src="files/moon.png" width="250" height="250">
 		
-		<iframe src="https://duckduckgo.com/search.html?width=400&prefill=Luna Search&bgcolor=#393F4C&focus=yes" style="overflow:hidden;margin:0;padding:0;width:458px;height:40px;" frameborder="0"></iframe>
+		<iframe src="https://duckduckgo.com/search.html?width=400&prefill=ROT Search&focus=yes" style="overflow:hidden;margin:0;padding:0;width:458px;height:40px;" frameborder="0"></iframe>
 		
 		<p>
 			Search powered by DuckDuckGo.
