--- a/home/index.html
+++ b/home/index.html
@@ -3,23 +3,16 @@
 		<title>
 			Luna Search
 		</title>
-		
 		<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 	</header>
-
 	<body>
-		<img class="moonmain" src="files/moon.png" width="250" height="250">
-		
+		<img class="moonmain" src="files/moon.png" width="150" height="150">
+		<br>
 		<iframe src="https://duckduckgo.com/search.html?width=400&prefill=ROT Search&focus=yes" style="overflow:hidden;margin:0;padding:0;width:458px;height:40px;" frameborder="0"></iframe>
-		
-		<p>
-			Search powered by DuckDuckGo.
-		</p>
+		<p>Search powered by DuckDuckGo.</p>
 	</body>
 </html>
-
 <style>
-
 body {
 	background-color: #393F4C;
 	color: #FAFAFA;
@@ -27,9 +20,8 @@ body {
 	font-family: Roboto;
 	font-size: 11px;
 }
-
-img.radishmain {
-	
+.moonmain {
+	padding-top: 50px;
+	padding-bottom: 50px;
 }
-
 </style>
